# ubuntu-system-repair-agent

./: LICENSE  README.md  main.py  pyproject.toml
scripts/: build-chroma-db.py
src/: config.py  state.py
src/agents/detector/: __init__.py  agent.py  mcp_server.py  prompts.py  schemas.py  test.py
src/data/: README.md  solutions.json
src/data/chroma_db/: chroma.sqlite3
